# cef-mixer

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  gen_vs2017.bat  gen_vs2019.bat
cmake/: cef_variables.cmake
patches/: README.md  cef_issue_2559.patch  shared_textures_3440.patch  shared_textures_3497.patch
resource/: hud.html
src/: CMakeLists.txt  app.manifest  app.rc  composition.cpp  composition.h  d3d11.cpp  d3d11.h  html_layer.cpp  image_layer.cpp  main.cpp  platform.h  resource.h  util.cpp  util.h  web_layer.cpp
